--- a/css/styles.css
+++ b/css/styles.css
@@ -14,16 +14,58 @@ body {
   font-size: 1.6rem;
 }
 
+ul {
+  margin: 0 auto;
+  border: 2px solid #444;
+  width: 60%;
+  margin-bottom: 3.6rem;
+}
+
 li {
-  border-bottom: 1px solid #555;
-  padding: 1.2rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2.4rem;
+}
+
+li:nth-child(odd) {
+  background: #ccc;
 }
 
 p {
-  padding: 0.4rem 0;
+  padding: 0.6rem 0;
+}
+
+h1,
+h2 {
+  text-align: center;
+}
+
+h1 {
+  margin: 1.6rem;
+}
+
+hr {
+  width: 10%;
+  margin: 0 auto;
+  height: 3px;
+  border: none;
+  background: #333;
+}
+
+h2 {
+  margin-top: 2.4rem;
+}
+
+form {
+  width: 24%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 input {
+  width: 100%;
   display: block;
   margin: 1.2rem 0;
   padding: 0.4em 0.8rem;
@@ -32,6 +74,12 @@ input {
 button {
   padding: 0.4rem 1.2rem;
   font-size: 1.4rem;
+  align-self: end;
+  box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 1);
+}
+
+button[type='submit'] {
+  width: 20%;
 }
 
 input {
